--- a/api/package.json
+++ b/api/package.json
@@ -1,49 +1,50 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon --es-module-specifier-resolution=node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build-babel": "babel ./src -d ./build/src",
-    "build": "npm run clean && npm run build-babel",
-    "production": "npm run build && node ./build/src/index.js",
-    "clean": "rm -rf build && mkdir build",
-    "dev": "nodemon --exec babel-node ./src/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bluebird": "^3.7.2",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "fs-extra": "^11.1.0",
-    "google-auth-library": "^8.7.0",
-    "http-server": "^14.1.1",
-    "jsonwebtoken": "^9.0.0",
-    "moment": "^2.29.4",
-    "mongoose": "^6.9.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
-    "otplib": "^12.0.1",
-    "passport": "^0.6.0",
-    "passport-facebook": "^3.0.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "socket.io": "^4.6.0",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/node": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
-    "babel": "^6.23.0",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "nodemon": "^2.0.20"
-  }
+    "name": "api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon --es-module-specifier-resolution=node src/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build-babel": "babel ./src -d ./build/src",
+        "build": "npm run clean && npm run build-babel",
+        "production": "npm run build && node ./build/src/index.js",
+        "clean": "rm -rf build && mkdir build",
+        "dev": "nodemon --exec babel-node ./src/index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bluebird": "^3.7.2",
+        "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
+        "dotenv": "^16.0.3",
+        "ejs": "^3.1.8",
+        "express": "^4.18.2",
+        "fs-extra": "^11.1.0",
+        "google-auth-library": "^8.7.0",
+        "http-server": "^14.1.1",
+        "jsonwebtoken": "^9.0.0",
+        "moment": "^2.29.4",
+        "mongoose": "^6.9.1",
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.1",
+        "otplib": "^12.0.1",
+        "passport": "^0.6.0",
+        "passport-facebook": "^3.0.0",
+        "passport-jwt": "^4.0.1",
+        "passport-local": "^1.0.0",
+        "socket.io": "^4.7.1",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.22.5",
+        "@babel/node": "^7.22.5",
+        "@babel/preset-env": "^7.22.5",
+        "babel": "^6.23.0",
+        "babel-cli": "^6.26.0",
+        "babel-plugin-module-resolver": "^5.0.0",
+        "nodemon": "^2.0.20"
+    }
 }
