--- a/api/.babelrc
+++ b/api/.babelrc
@@ -1,14 +1,3 @@
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": [
-    ["@babel/plugin-transform-runtime"],
-    [
-      "module-resolver",
-      {
-        "alias": {
-          "src": "./src"
-        }
-      }
-    ]
-  ]
+    "presets": ["@babel/preset-env"]
 }
