--- a/api/package.json
+++ b/api/package.json
@@ -39,12 +39,10 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.22.5",
         "@babel/core": "^7.22.5",
         "@babel/node": "^7.22.5",
         "@babel/preset-env": "^7.22.5",
-        "babel": "^6.23.0",
-        "babel-cli": "^6.26.0",
-        "babel-plugin-module-resolver": "^5.0.0",
         "nodemon": "^2.0.20"
     }
 }
