fix feature update_user_info

--- a/client/.env.sample 
+++ b/client/.env.sample 
@@ -6,3 +6,5 @@ REACT_APP_SERVER = "http://localhost:3001"
 REACT_APP_NAMEAPP = "AppChat"
 REACT_APP_VIDEO_URL = "http://localhost:3000/VideoChat"
 REACT_APP_SERVER_AVATAR_GROUP = "http://localhost:3001/image/randomAvatar"
+REACT_APP_TENOR_KEY = "AIzaSyC0bYiuf2fGIBmCou14Ykvy4yDJsc_u4SI"
+REACT_APP_TENOR_URL = "https://tenor.googleapis.com/v2/search"
