--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,12 @@
     "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "peerjs": "^1.4.7",
+    "photoswipe": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.10.1",
+    "react-photoswipe-gallery": "^2.2.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
