add folder public

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -3,5 +3,5 @@
 .env
 /src/routes/test.js
 /test.http
-/src/public/images/avatars
-/src/public/images/message
+/src/public/images/avatars/*
+/src/public/images/message/*
