--- a/api/example.env
+++ b/api/example.env
@@ -1,6 +1,7 @@
+HOST = "http://localhost:3001"
 PORT = 3001
 
-DATABASE_URL = mongodb+srv://admin:YZtczZc8GulF9hQV@cluster0.8n667.mongodb.net/AppChat?retryWrites=true&w=majority
+DATABASE_URL = mongodb+srv://admin:YZtczZc8GulF9hQV@cluster0.8n667.mongodb.net/AppChatTest?retryWrites=true&w=majority
 
 
 JWT_SECRET_KEY = "jwt-secret-key"
@@ -8,7 +9,7 @@ JWT_SECRET_KEY = "jwt-secret-key"
 # google authentication
 GOOGLE_CLIENT_ID: '839737220355-c231773v07atcv7a32sdq8ee4deucvam.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET: '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'
-callbackURLGoogle: 'http://localhost:3001/oauth2/redirect/google'
+callbackURLGoogle: ${HOST}/oauth2/redirect/google
 
 
 CRYPTO_KEY = "Sang123"
@@ -16,7 +17,6 @@ CRYPTO_KEY = "Sang123"
 MAILADMIN = "chatappsang148@gmail.com"
 PASSMAILADMIN = "nqmqhnkpsarauptf"
 
-HOST = "http://localhost"
-DOMAIN = "http://localhost:3001"
-IMAGE_FOLDER = "http://localhost:3001/images/message"
-AVATAR_GROUP_CUSTOM = "http://localhost:3001/images/groupAvatarDefault"
+IMAGE_FOLDER = ${HOST}/images/message
+AVATAR_GROUP_CUSTOM = ${HOST}/images/groupAvatarDefault
+CLIENT_APP="http://localhost:3000"
