--- a/client/example.env
+++ b/client/example.env
@@ -5,6 +5,7 @@ REACT_APP_GOOGLE = "839737220355-c231773v07atcv7a32sdq8ee4deucvam.apps.googleuse
 REACT_APP_SERVER = "http://localhost:3001"
 REACT_APP_NAMEAPP = "AppChat"
 REACT_APP_VIDEO_URL = "http://localhost:3000/VideoChat"
-REACT_APP_SERVER_AVATAR_GROUP = "http://localhost:3001/image/randomAvatar"
+REACT_APP_SERVER_AVATAR_GROUP = ${REACT_APP_SERVER}/images/randomAvatar
 REACT_APP_TENOR_KEY = "AIzaSyC0bYiuf2fGIBmCou14Ykvy4yDJsc_u4SI"
 REACT_APP_TENOR_URL = "https://tenor.googleapis.com/v2/search"
+REACT_APP_STICKER_IMAGE = ${REACT_APP_SERVER}/images/sticker
