--- a/api/package.json
+++ b/api/package.json
@@ -16,9 +16,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "bluebird": "^3.7.2",
         "cors": "^2.8.5",
-        "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
         "ejs": "^3.1.8",
         "express": "^4.18.2",
@@ -30,9 +30,7 @@
         "mongoose": "^6.9.1",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.1",
-        "otplib": "^12.0.1",
         "passport": "^0.6.0",
-        "passport-facebook": "^3.0.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
         "socket.io": "^4.7.1",
