update jenkins file

--- a/api/example.env
+++ b/api/example.env
@@ -1,7 +1,8 @@
 HOST = "http://localhost:3001"
 PORT = 3001
+CLIENT_APP="http://localhost:3000"
 
-DATABASE_URL = mongodb+srv://admin:YZtczZc8GulF9hQV@cluster0.8n667.mongodb.net/AppChatTest?retryWrites=true&w=majority
+DATABASE_URL = mongodb+srv://admin:YZtczZc8GulF9hQV@cluster0.8n667.mongodb.net/AppChat?retryWrites=true&w=majority
 
 
 JWT_SECRET_KEY = "jwt-secret-key"
@@ -17,6 +18,4 @@ CRYPTO_KEY = "Sang123"
 MAILADMIN = "chatappsang148@gmail.com"
 PASSMAILADMIN = "nqmqhnkpsarauptf"
 
-IMAGE_FOLDER = ${HOST}/images/message
-AVATAR_GROUP_CUSTOM = ${HOST}/images/groupAvatarDefault
-CLIENT_APP="http://localhost:3000"
+RESET_PASSWORD_URL = http://localhost:3000/resetPassword
